# FastAPI-products-and-categories

./: .dockerignore  Dockerfile  Readme.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  testtask.db
models/: product.py  product_category.py
routers/: product.py  product_category.py
schemas/: product.py  product_category.py
scripts/: product.py  product_category.py
tests/: test_main.py
tests/product/: test_product.py
tests/product_category/: test_product_category.py
