[tool.poetry]
name = "fastapi-testtask"
version = "0.1.0"
description = ""
authors = ["GodRickk <72164370+GodRickk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
